Fix projects-load-more margin to prevent gap before footer

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1372,7 +1372,8 @@ main + .site-footer {
 
 .projects-load-more {
   text-align: center;
-  margin: 60px 0 40px;
+  margin: 60px 0 0;
+  padding-bottom: 40px;
 }
 
 .projects-load-more-btn {
